# SPOVM

Aio_Reader/: Aio_Reader.sln
Aio_Reader/Aio_Reader/: Aio_Reader.vcxproj  Aio_Reader.vcxproj.filters  AsyncIO.cpp  AsyncIO.h  pch.h
Aio_Reader/Aio_Reader/Debug/: vc142.idb
Aio_Reader/Aio_Reader/Debug/Aio_Reader.tlog/: Aio_Reader.lastbuildstate  Aio_Reader.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.10636.delete.1.tlog  link.12848.delete.1.tlog  link.9020.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FileSystem/: FileSystem.sln
FileSystem/Debug/: FileSystem.ilk
FileSystem/FileSystem/: FileSystem.cpp  FileSystem.h  FileSystem.vcxproj  FileSystem.vcxproj.filters  kek.fs  main.cpp  storage.fs
FileSystem/FileSystem/Debug/: vc142.idb
FileSystem/FileSystem/Debug/FileSystem.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FileSystem.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MemoryDefrag/: MemoryDefrag.sln
MemoryDefrag/Debug/: MemoryDefrag.ilk
MemoryDefrag/MemoryDefrag/: Memory.cpp  Memory.h  MemoryDefrag.vcxproj  MemoryDefrag.vcxproj.filters  main.cpp
MemoryDefrag/MemoryDefrag/Debug/: vc142.idb
MemoryDefrag/MemoryDefrag/Debug/MemoryDefrag.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MemoryDefrag.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ThreadRW/: CMakeLists.txt  Makefile  main  main.cpp
ThreadRW/files/: result.txt
ThreadRW/lib/: --library=aio  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ThreadRW/lib/src/: main.cpp
ThreadRW_win/: Thread_RW.sln
ThreadRW_win/Thread_RW/: Thread_RW.vcxproj  main.cpp
ThreadRW_win/Thread_RW/Debug/: vc142.idb
ThreadRW_win/Thread_RW/Debug/Thread_RW.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Thread_RW.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ThreadRW_win/Thread_RW/includes/: 1.txt  result.txt
ThreadSync/: CMakeLists.txt  main.cpp
ThreadSync_win/: main.cpp
